<resources>
    <string name="app_name">Artillery</string>
    <string name="OrudieSettings">Настройки орудия</string>
    <string name="PopravkiSettings">Поправки</string>
    <string name="windspeed">скорость ветра</string>
    <string name="windugol">куда дует ветер (по компасу)</string>
    <string name="humidity">давл.</string>
    <string name="temp">темп.</string>
    <string name="save">сохранить</string>
    <string name="add_weapon">Добавить орудие</string>
    <string name="not_data">Нет данных</string>
    <string name="edit">Изменить</string>
    <string name="weapon">Орудие</string>
    <string name="h_weapon">Высота орудия</string>
    <string name="azimut_th">Направление на ТН (дирекционный угол)</string>
    <string name="bussol">Угол (по данным буссоли)</string>
    <string name="x_weapon">X(орудия)</string>
    <string name="y_weapon">Y(орудия)</string>
    <string name="map">Карта</string>
    <string name="x_th">X(точки наводки)</string>
    <string name="y_th">Y(точки наводки)</string>
    <string name="accept">Подтвердить</string>
    <string name="change_map">Выберите карту</string>
    <string name="name_weapon">Имя орудия</string>
    <string name="target_list">Журнал целей:</string>
    <string name="add_target">Добавить цель</string>
    <string name="name_target">Наименование цели</string>
    <string name="x_target">X(цели)</string>
    <string name="y_target">Y(цели)</string>
    <string name="h_target">Высота цели</string>
    <string name="egor_minomet_target">Направление (от миномета до цели)</string>
    <string name="not_bussol">Без буссоли</string>
    <string name="range_to_target">Дистанция до цели (м)</string>
    <string name="mortire">Мортирная стрельба</string>
    <string name="update_enemy">Сохранить</string>
    <string name="load_enemy">Восстановить</string>
    <string name="databasesettings">Настройка базы</string>
    <string name="db_weapon">Орудия</string>
    <string name="db_bullet">Снаряды</string>
    <string name="db_table">Таблица стрельбы</string>
    <string name="db_mil">Значение mil(6000/6400)</string>
    <string name="enemy_show_korrect">Показывать корректировку</string>
    <string name="distance">Дистанция</string>
    <string name="pricel">Прицел</string>
    <string name="pricel_dal">Прицел(д)</string>
    <string name="pricel_height">Прицел(в)</string>
    <string name="divergenshion">Дивер.</string>
    <string name="wind_y">Ветер(у)</string>
    <string name="wind_x">Ветер(д)</string>
    <string name="add">Добавить</string>
    <string name="updatedot">Пересчетать по бусоли</string>
    <string name="updatedot_prilet">Пересчетать по прилету</string>
    <string name="update">обновить</string>
    <string name="radius">радиус разброса</string>
    <string name="usedlocalmap">Использовать локальную карту</string>
    <string name="title_zargabad">zargabad</string>
    <string name="map_for_load">Карты для загрузки</string>
    <string name="map_prilet">Прилет</string>
    <string name="title_takistan">takistan</string>
    <string name="base">Норма</string>
    <string name="title_altis">altis</string>
    <string name="title_chernarus">chernarus</string>
    <string name="title_chongo">chongo</string>
    <string name="title_dingor">dingor</string>
    <string name="title_eden">eden</string>
    <string name="title_enoch">enoch</string>
    <string name="title_kujari">kujari</string>
    <string name="title_lythium">lythium</string>
    <string name="title_malden">malden</string>
    <string name="title_mcn_aliabad">mcn_aliabad</string>
    <string name="title_mcn_hazarkot">mcn_hazarkot</string>
    <string name="title_mountains_acr">mountains_acr</string>
    <string name="title_napf">napf</string>
    <string name="title_pabst_yellowstone">pabst_yellowstone</string>
    <string name="title_panthera3">panthera3</string>
    <string name="title_ruha">ruha</string>
    <string name="title_sara">sara</string>
    <string name="title_sara_dbe1">sara_dbe1</string>
    <string name="title_seangola">seangola</string>
    <string name="title_stratis">stratis</string>
    <string name="title_tanoa">tanoa</string>
    <string name="title_taunus">taunus</string>
    <string name="title_tem_anizay">tem_anizay</string>
    <string name="title_tem_suursaariv">tem_suursaariv</string>
    <string name="title_uzbin">uzbin</string>
    <string name="title_vt7">vt7</string>
    <string name="title_wl_rosche">wl_rosche</string>
    <string name="title_woodland_acr">woodland_acr</string>
    <string name="reset_settings_weapon">Загрузить список орудий</string>
    <string name="reset_settings_table">Загрузить таблицу орудия</string>
    <string name="title_cup_chernarus_a3">cup_chernarus_a3</string>
    <string name="title_pja314">pja314</string>
    <string name="updateTH">Обновить угол на точку наводки</string>
    <string name="title_lythium_part0">Lythium(part 0)</string>
    <string name="title_lythium_part1">Lythium(part1)</string>
    <string name="title_lythium_part2">Lythium(part2)</string>
    <string name="title_lythium_part3">Lythium(part3)</string>
    <string name="title_lythium_part4">Lythium(part4)</string>
    <string name="title_pecher">Pecher</string>
    <string name="title_pecher_part1">Pecher (part1)</string>
    <string name="title_altis_path0">Altis (part0)</string>
    <string name="title_altis_part0">Altis (part0)</string>
    <string name="title_altis_part1">Altis (part1)</string>
    <string name="title_altis_part2">Altis (part2)</string>
    <string name="update_app">Обновить приложение</string>
    <string name="title_brf_sumava">brf_sumava</string>
    <string name="title_fallujahint">fallujahint</string>
    <string name="title_vt7_part0">Vt7 (part0)</string>
    <string name="title_vt7_part1">Vt7 (part1)</string>
    <string name="title_vt7_part2">Vt7 (part2)</string>
    <string name="btn_map_height">Рассчетать</string>
    <string name="title_altis_heightmap">Altis (Height map)</string>
    <string name="title_ruha_heightmap">Ruha (heightmap)</string>
    <string name="title_lythium_heightmap">Lythium (heightmap)</string>
    <string name="title_pja314_heightmap">Pja314 (heightmap)</string>
    <string name="title_fallujahint_heightmap">fallujahint (heightmap)</string>
    <string name="title_takistan_heightmap">takistan (heightmap)</string>
    <string name="title_wl_rosche_heightmap">rosche (heightmap)</string>
    <string name="title_brf_sumava_heightmap">brf_sumava (heightmap)</string>
    <string name="title_chernarus_heightmap">chernarus (heightmap)</string>
    <string name="title_chongo_heightmap">chongo (heightmap)</string>
    <string name="title_dingor_heightmap">dingor (heightmap)</string>
    <string name="title_eden_heightmap">eden (heightmap)</string>
    <string name="title_enoch_heightmap">enoch (heightmap)</string>
    <string name="title_kujari_heightmap">kujari (heightmap)</string>
    <string name="title_malden_heightmap">malden (heightmap)</string>
    <string name="title_mcn_aliabad_heightmap">mcn_aliabad (heightmap)</string>
    <string name="title_mcn_hazarkot_heightmap">mcn_hazarkot (heightmap)</string>
    <string name="title_mountains_acr_heightmap">mountains_acr (heightmap)</string>
    <string name="title_napf_heightmap">napf (heightmap)</string>
    <string name="title_pabst_yellowstone_heightmap">pabst_yellowstone (heightmap)</string>
    <string name="title_panthera3_heightmap">panthera3 (heightmap)</string>
    <string name="title_pecher_heightmap">pecher (heightmap)</string>
    <string name="title_sara_heightmap">sara (heightmap)</string>
    <string name="title_sara_dbe1_heightmap">sara_dbe1 (heightmap)</string>
    <string name="title_seangola_heightmap">seangola (heightmap)</string>
    <string name="title_stratis_heightmap">stratis (heightmap)</string>
    <string name="title_tanoa_heightmap">tanoa (heightmap)</string>
    <string name="title_taunus_heightmap">taunus (heightmap)</string>
    <string name="title_tem_anizay_heightmap">tem_anizay (heightmap)</string>
    <string name="title_tem_suursaariv_heightmap">tem_suursaariv (heightmap)</string>
    <string name="title_uzbin_heightmap">uzbin (heightmap)</string>
    <string name="title_vt7_heightmap">vt7 (heightmap)</string>
    <string name="title_woodland_acr_heightmap">woodland_acr (heightmap)</string>
    <string name="title_zargabad_heightmap">zargabad (heightmap)</string>
    <string name="title_pja314_part0">pja314 (part0)</string>
    <string name="title_pja314_part1">pja314 (part1)</string>
    <string name="title_pja314_part2">pja314 (patr2)</string>
    <string name="title_takistan_part0">takistan (part0)</string>
    <string name="title_takistan_part1">takistan (part1)</string>
    <string name="title_takistan_part2">takistan (part2)</string>
</resources>