<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.db.DBSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/button_settingsdb_weapon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/db_weapon" />

        <Button
            android:id="@+id/button_settingsdb_bullet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/db_bullet"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_settingsdb_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/db_table" />

        <Button
            android:id="@+id/button_settingsdb_maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_for_load" />

        <Button
            android:id="@+id/button_settingsdb_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/reset_settings_weapon" />

        <Switch
            android:id="@+id/localMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usedlocalmap" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>