<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/text_list_item_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />
    <com.google.android.material.button.MaterialButton
        android:text="@string/update"
        android:id="@+id/btn_change_TH_bussol"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox_not_bussol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/not_bussol" />

        <CheckBox
            android:id="@+id/checkBox_mortire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mortire" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_bussol_til"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_bussol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bussol"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enemy"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_enemy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/egor_minomet_target"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/range"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/range_to_target"
                android:inputType="number|numberSigned|numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

    <com.google.android.material.button.MaterialButton
        android:text="@string/updatedot"
        android:id="@+id/btn_change_TH_dot"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <com.google.android.material.button.MaterialButton
        android:text="@string/updatedot_prilet"
        android:id="@+id/btn_change_TH_dot_prilet"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>